feat: 行列操作和 merge 操作
